--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        .element {
+            max-width: fit-content;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Hi</h1>
-    <a href="index.html">Hello</a>
+    <div class="element">
+        <h1>Comming Soon, Building awesome things for you</h1>
+    </div>
 </body>
 
 </html>
