--- a/index.html
+++ b/index.html
@@ -4,19 +4,249 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <style>
-        .element {
-            max-width: fit-content;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    </style>
+    <title>Isaac Class : Best E-Learning Platform</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/Blue_White_Minimalist_Initial_Academy_Logo-removebg-preview.png"
+        type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <div class="element">
-        <h1>Comming Soon, Building awesome things for you</h1>
+    <!--Marquee Section-->
+    <div class="marquee container-fluid">
+        <marquee>
+            <span>Welcome to the best E-Learning Provider. Bright future belongs to us</span>
+        </marquee>
+    </div>
+
+    <!--Navigator-->
+    <div class="navigator container">
+        <div class="row">
+            <div class="col-sm-6">
+                <nav class="navbar">
+                    <div class="container">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="images/Blue_White_Minimalist_Initial_Academy_Logo-removebg-preview.png"
+                                alt="Isaac Classes" width="30" height="24">
+                        </a>
+                    </div>
+                </nav>
+            </div>
+            <div class="col-sm-6">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                        aria-expanded="false">
+                                        Courses
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="courses/class1.html">Class 1</a></li>
+                                        <li><a class="dropdown-item" href="courses/class2.html">Class 2</a></li>
+                                        <li><a class="dropdown-item" href="courses/class3.html">Class 3</a></li>
+                                        <li><a class="dropdown-item" href="courses/class4.html">Class 4</a></li>
+                                        <li><a class="dropdown-item" href="courses/class5.html">Class 5</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="career.html">Career</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+
+    <!--Crousal-->
+    <div class="slider container">
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/slider1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/slider2.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/slider1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <!--About_Us Section-->
+    <div class="About_us container" style="margin-top: 25px;">
+        <h1 style="text-align: center;">About Isaac Classes</h1>
+        <div class="row">
+            <div class="col-sm-6">
+                <iframe width="100%" height="315"
+                    src="https://www.youtube.com/embed/ivkNbh8YyUo?si=Wfj2w4F1QibkIOjm&amp;controls=0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="col-sm-6" style="padding: 20px 40px;">
+                <p>
+                    This comprehensive Java Programming Course covers everything from Java basics, control structures,
+                    functions, classes, objects to advanced concepts in Java including Java Collections, Algorithms,
+                    etc. Whether you're a complete Java beginner or looking to enhance your Java programming skills,
+                    this complete Java course will guide you through every step of your Java journey. Enroll now for
+                    expert-led Java training!
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!--Our Team-->
+    <div class="team container">
+        <h1 style="text-align: center;">Expert Teaching Team</h1>
+        <div class="teachers row">
+            <div class="col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/Aadarsh_Singh.jpg" class="card-img-top" alt="..." style="border-radius: 90%">
+                    <div class="card-body">
+                        <h5 class="card-title">Aadarsh Singh</h5>
+                        <p class="card-text">Academic Mentor</p>
+                        <a href="https://www.linkedin.com/in/hi-aadarshsingh/" target="_blank"><i
+                                class="fa-brands fa-linkedin fs-2"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/Aadarsh_Singh.jpg" class="card-img-top" alt="..." style="border-radius: 90%">
+                    <div class="card-body">
+                        <h5 class="card-title">Khushi Chaturvedi</h5>
+                        <p class="card-text">Academic Mentor</p>
+                        <a href="https://www.linkedin.com/in/hi-aadarshsingh/" target="_blank"><i
+                                class="fa-brands fa-linkedin fs-2"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/Aadarsh_Singh.jpg" class="card-img-top" alt="..." style="border-radius: 90%">
+                    <div class="card-body">
+                        <h5 class="card-title">Neha</h5>
+                        <p class="card-text">Academic Mentor</p>
+                        <a href="https://www.linkedin.com/in/hi-aadarshsingh/" target="_blank"><i
+                                class="fa-brands fa-linkedin fs-2"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/Aadarsh_Singh.jpg" class="card-img-top" alt="..." style="border-radius: 90%">
+                    <div class="card-body">
+                        <h5 class="card-title">Aadarsh Singh</h5>
+                        <p class="card-text">Academic Mentor</p>
+                        <a href="https://www.linkedin.com/in/hi-aadarshsingh/" target="_blank"><i
+                                class="fa-brands fa-linkedin fs-2"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Why Us-->
+    <div class="vision container">
+        <h1 style="text-align: center;">Why Choose Us?</h1>
+        <div class="row">
+            <div class="col-sm-6">
+                <img src="images/6333862.jpg" alt="" class="img-fluid" style="padding: 20px;">
+            </div>
+            <div class="col-sm-6">
+                <p>Not only Learning</p>
+                <ul>
+                    <li>Test</li>
+                    <li>Review</li>
+                    <li>Extra Classes if required</li>
+                    <li>Other competitions</li>
+                    <li>Rewards on achievements</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <!--Testimonial-->
+    <div class="testimonial container">
+        <h1 style="text-align: center;">Your opinion matters for us</h1>
+        <div class="row">
+            <div class="col-sm-6">
+                <p>hi</p>
+            </div>
+            <div class="col-sm-6">
+                <p>hi</p>
+            </div>
+        </div>
+    </div>
+
+    <!--Footer-->
+    <div class="footer container">
+        <div class="row">
+            <div class="col-sm-3"><a href="terms.html">Terms and Condition</a></div>
+            <div class="col-sm-3"><a href="privacy_policy.html">Privacy Policy</a></div>
+            <div class="col-sm-3"><a href="refund.html">Refund</a></div>
+            <div class="col-sm-3"><a href="contact_us.html">Contact Us</a></div>
+        </div>
+    </div>
+
+    <!--Copyright-->
+    <div class="copyright container-fluid">
+        <div class="row">
+            <div class="col-sm-12">
+                <p style="padding: 10px 0px;">Copyright Isaac Classes. All right reserved</p>
+            </div>
+        </div>
     </div>
 </body>
 
